--- a/examples/temporal_clue/temporal-clue-7b.ipynb
+++ b/examples/temporal_clue/temporal-clue-7b.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,9 +12,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".cell-output-ipywidget-background {\n",
+       "    background-color: transparent !important;\n",
+       "}\n",
+       ":root {\n",
+       "    --jp-widgets-color: var(--vscode-editor-foreground);\n",
+       "    --jp-widgets-font-size: var(--vscode-editor-font-size);\n",
+       "}  \n",
+       "</style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%html\n",
     "<style>\n",
@@ -63,7 +84,9 @@
     "\n",
     "\n",
     "async def rollout(model: art.Model, puzzle: TemporalCluePuzzle) -> art.Trajectory:\n",
-    "    messages: art.Messages = [{\"role\": \"user\", \"content\": puzzle[\"prompt\"]}]\n",
+    "    messages: art.Messages = [\n",
+    "        {\"role\": \"user\", \"content\": puzzle[\"prompt\"] + \" /no_think\"}\n",
+    "    ]\n",
     "    client = model.openai_client()\n",
     "    chat_completion = await client.chat.completions.create(\n",
     "        messages=messages, model=model.name\n",
@@ -84,7 +107,7 @@
     "\n",
     "\n",
     "model = art.TrainableModel(\n",
-    "    name=\"003\", project=\"temporal-clue\", base_model=\"Qwen/Qwen2.5-7B-Instruct\"\n",
+    "    name=\"016\", project=\"temporal-clue\", base_model=\"Qwen/Qwen2.5-7B-Instruct\"\n",
     ")\n",
     "backend = LocalBackend()\n",
     "await model.register(backend)\n",
