feat: cispo support

--- a/examples/temporal_clue/temporal-clue-7b.ipynb
+++ b/examples/temporal_clue/temporal-clue-7b.ipynb
@@ -63,10 +63,12 @@
     "\n",
     "\n",
     "async def rollout(model: art.Model, puzzle: TemporalCluePuzzle) -> art.Trajectory:\n",
-    "    messages: art.Messages = [{\"role\": \"user\", \"content\": puzzle[\"prompt\"]}]\n",
+    "    messages: art.Messages = [\n",
+    "        {\"role\": \"user\", \"content\": puzzle[\"prompt\"] + \" /no_think\"}\n",
+    "    ]\n",
     "    client = model.openai_client()\n",
     "    chat_completion = await client.chat.completions.create(\n",
-    "        messages=messages, model=model.name\n",
+    "        messages=messages, model=model.name, max_tokens=4096\n",
     "    )\n",
     "    choice = chat_completion.choices[0]\n",
     "    content = choice.message.content\n",
@@ -84,7 +86,7 @@
     "\n",
     "\n",
     "model = art.TrainableModel(\n",
-    "    name=\"003\", project=\"temporal-clue\", base_model=\"Qwen/Qwen2.5-7B-Instruct\"\n",
+    "    name=\"020\", project=\"temporal-clue\", base_model=\"Qwen/Qwen2.5-7B-Instruct\"\n",
     ")\n",
     "backend = LocalBackend()\n",
     "await model.register(backend)\n",
@@ -114,6 +116,10 @@
     "    await model.train(\n",
     "        train_groups,\n",
     "        config=art.TrainConfig(learning_rate=5e-6),\n",
+    "        _config=art.dev.TrainConfig(\n",
+    "            epsilon=1.0,\n",
+    "            epsilon_high=0.2,\n",
+    "        ),\n",
     "    )"
    ]
   }
