--- a/examples/temporal_clue/temporal-clue-7b.ipynb
+++ b/examples/temporal_clue/temporal-clue-7b.ipynb
@@ -63,10 +63,10 @@
     "\n",
     "\n",
     "async def rollout(model: art.Model, puzzle: TemporalCluePuzzle) -> art.Trajectory:\n",
-    "    messages: art.Messages = [{\"role\": \"user\", \"content\": puzzle[\"prompt\"]}]\n",
+    "    messages: art.Messages = [{\"role\": \"user\", \"content\": puzzle[\"prompt\"] + \" /no_think\"}]\n",
     "    client = model.openai_client()\n",
     "    chat_completion = await client.chat.completions.create(\n",
-    "        messages=messages, model=model.name\n",
+    "        messages=messages, model=model.name, max_tokens=4096\n",
     "    )\n",
     "    choice = chat_completion.choices[0]\n",
     "    content = choice.message.content\n",
@@ -84,7 +84,7 @@
     "\n",
     "\n",
     "model = art.TrainableModel(\n",
-    "    name=\"003\", project=\"temporal-clue\", base_model=\"Qwen/Qwen2.5-7B-Instruct\"\n",
+    "    name=\"024\", project=\"temporal-clue\", base_model=\"Qwen/Qwen2.5-7B-Instruct\"\n",
     ")\n",
     "backend = LocalBackend()\n",
     "await model.register(backend)\n",
