feat: Add experimental `advantage_balance` training parameter

--- a/examples/temporal_clue/temporal-clue-7b.ipynb
+++ b/examples/temporal_clue/temporal-clue-7b.ipynb
@@ -63,10 +63,12 @@
     "\n",
     "\n",
     "async def rollout(model: art.Model, puzzle: TemporalCluePuzzle) -> art.Trajectory:\n",
-    "    messages: art.Messages = [{\"role\": \"user\", \"content\": puzzle[\"prompt\"]}]\n",
+    "    messages: art.Messages = [\n",
+    "        {\"role\": \"user\", \"content\": puzzle[\"prompt\"] + \" /no_think\"}\n",
+    "    ]\n",
     "    client = model.openai_client()\n",
     "    chat_completion = await client.chat.completions.create(\n",
-    "        messages=messages, model=model.name\n",
+    "        messages=messages, model=model.name, max_tokens=4096\n",
     "    )\n",
     "    choice = chat_completion.choices[0]\n",
     "    content = choice.message.content\n",
@@ -84,7 +86,7 @@
     "\n",
     "\n",
     "model = art.TrainableModel(\n",
-    "    name=\"003\", project=\"temporal-clue\", base_model=\"Qwen/Qwen2.5-7B-Instruct\"\n",
+    "    name=\"021\", project=\"temporal-clue\", base_model=\"Qwen/Qwen2.5-7B-Instruct\"\n",
     ")\n",
     "backend = LocalBackend()\n",
     "await model.register(backend)\n",
@@ -109,6 +111,10 @@
     "            pbar_total_completion_tokens=False,\n",
     "        ),\n",
     "    )\n",
+    "    for group in train_groups:\n",
+    "        max_reward = max(trajectory.reward for trajectory in group)\n",
+    "        for trajectory in group:\n",
+    "            trajectory.metrics[\"max_reward\"] = max_reward\n",
     "    await model.log(val_groups)\n",
     "    await model.delete_checkpoints()\n",
     "    await model.train(\n",
