feat: Start exploring causality

--- a/examples/temporal_clue/temporal-clue-torchtune.ipynb
+++ b/examples/temporal_clue/temporal-clue-torchtune.ipynb
@@ -40,6 +40,7 @@
     "import json\n",
     "import random\n",
     "import re\n",
+    "import torch\n",
     "from typing import TypedDict\n",
     "\n",
     "from art.local import LocalBackend\n",
@@ -84,18 +85,19 @@
     "\n",
     "\n",
     "model = art.TrainableModel(\n",
-    "    name=\"001\",\n",
+    "    name=\"002\",\n",
     "    project=\"temporal-clue\",\n",
-    "    base_model=\"Qwen/Qwen2.5-14B-Instruct\",\n",
+    "    base_model=\"Qwen/Qwen3-14B\",\n",
     "    _internal_config={\n",
     "        \"engine_args\": {\n",
-    "            \"tensor_parallel_size\": 2,\n",
-    "            \"gpu_memory_utilization\": 0.7,\n",
-    "            \"max_num_seqs\": 512,\n",
+    "            \"tensor_parallel_size\": torch.cuda.device_count(),\n",
+    "            \"gpu_memory_utilization\": 0.9,\n",
+    "            \"max_num_seqs\": 256,\n",
+    "            \"enforce_eager\": True,\n",
     "        },\n",
     "        \"torchtune_args\": {\n",
-    "            \"model\": \"qwen2_5_14b_instruct\",\n",
-    "            \"model_type\": \"QWEN2\",\n",
+    "            \"model\": \"qwen3_14b_instruct\",\n",
+    "            \"model_type\": \"QWEN3\",\n",
     "            \"async_weight_syncing\": True,\n",
     "        },\n",
     "    },\n",
@@ -103,20 +105,20 @@
     "backend = LocalBackend()\n",
     "await model.register(backend)\n",
     "\n",
-    "stride = 8\n",
+    "stride = 4\n",
     "for i in range(await model.get_step(), 1_000):\n",
     "    val_groups, train_groups = await asyncio.gather(\n",
     "        art.gather_trajectory_groups(\n",
     "            (\n",
-    "                art.TrajectoryGroup(rollout(model, puzzle) for _ in range(2))\n",
-    "                for puzzle in val_puzzles\n",
+    "                art.TrajectoryGroup(rollout(model, puzzle) for _ in range(1))\n",
+    "                for puzzle in val_puzzles[:1]\n",
     "            ),\n",
     "            pbar_desc=\"val\",\n",
     "            pbar_total_completion_tokens=False,\n",
     "        ),\n",
     "        art.gather_trajectory_groups(\n",
     "            (\n",
-    "                art.TrajectoryGroup(rollout(model, puzzle) for _ in range(50))\n",
+    "                art.TrajectoryGroup(rollout(model, puzzle) for _ in range(4))\n",
     "                for puzzle in train_puzzles[i * stride : (i + 1) * stride]\n",
     "            ),\n",
     "            pbar_desc=\"train\",\n",
