feat: Enhance illustration functionality with customizable color gradients
- Updated `illustrate` function to accept a `gradient` parameter for color mapping.
- Added multiple gradient options including "one-dark", "fire", "ocean", and more.
- Modified output in `granular-rewards.ipynb` to utilize the new gradient feature.
- Improved color representation in the output legend to reflect selected gradient.

--- a/dev/granular-rewards.ipynb
+++ b/dev/granular-rewards.ipynb
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "3798550b",
    "metadata": {},
    "outputs": [
@@ -170,23 +170,23 @@
       "\u001b[90m║      Stats: μ= 0.531, σ= 0.916, min=-0.478, max= 1.989      ║\u001b[0m\n",
       "\u001b[90m╚═════════════════════════════════════════════════════════════╝\u001b[0m\n",
       "\n",
-      "\u001b[38;2;209;154;102mHello\u001b[0m\u001b[38;2;171;178;191m,\u001b[0m\u001b[38;2;134;175;106m world\u001b[0m\u001b[38;2;190;80;70m!\u001b[0m\n",
+      "\u001b[38;2;172;147;192mHello\u001b[0m\u001b[38;2;170;177;191m,\u001b[0m\u001b[38;2;133;189;109m world\u001b[0m\u001b[38;2;196;116;147m!\u001b[0m\n",
       "\n",
       "Value Distribution:\n",
-      "  \u001b[38;2;209;154;102mHello \u001b[0m  [────────\u001b[38;2;209;154;102m█\u001b[0m─│─────────]    0.068\n",
-      "  \u001b[38;2;171;178;191m,     \u001b[0m  [──────────│─────────]    0.547\n",
-      "  \u001b[38;2;134;175;106m world\u001b[0m  [──────────│────\u001b[38;2;134;175;106m█\u001b[0m────]    1.989\n",
-      "  \u001b[38;2;190;80;70m!     \u001b[0m  [──────\u001b[38;2;190;80;70m█\u001b[0m───│─────────]   -0.478\n",
+      "  \u001b[38;2;172;147;192mHello \u001b[0m  [────────\u001b[38;2;172;147;192m█\u001b[0m─│─────────]    0.068\n",
+      "  \u001b[38;2;170;177;191m,     \u001b[0m  [──────────│─────────]    0.547\n",
+      "  \u001b[38;2;133;189;109m world\u001b[0m  [──────────│────\u001b[38;2;133;189;109m█\u001b[0m────]    1.989\n",
+      "  \u001b[38;2;196;116;147m!     \u001b[0m  [──────\u001b[38;2;196;116;147m█\u001b[0m───│─────────]   -0.478\n",
       "\n",
       "\u001b[90m────────────────────────────────────────────────────────────\u001b[0m\n",
-      "Legend: \u001b[38;2;224;108;117m█\u001b[0m Very Negative  \u001b[38;2;209;154;102m█\u001b[0m Negative  \u001b[38;2;171;178;191m█\u001b[0m Neutral  \u001b[38;2;152;195;121m█\u001b[0m Positive  \u001b[38;2;97;175;239m█\u001b[0m Very Positive\u001b[0m\n"
+      "Gradient (one-dark): \u001b[38;2;219;86;97m█\u001b[0m\u001b[38;2;215;88;88m█\u001b[0m\u001b[38;2;211;100;89m█\u001b[0m\u001b[38;2;208;112;91m█\u001b[0m\u001b[38;2;204;122;93m█\u001b[0m\u001b[38;2;200;118;98m█\u001b[0m\u001b[38;2;196;116;146m█\u001b[0m\u001b[38;2;193;133;189m█\u001b[0m\u001b[38;2;170;149;191m█\u001b[0m\u001b[38;2;163;165;191m█\u001b[0m\u001b[38;2;165;179;190m█\u001b[0m\u001b[38;2;153;187;187m█\u001b[0m\u001b[38;2;140;186;166m█\u001b[0m\u001b[38;2;127;185;135m█\u001b[0m\u001b[38;2;135;185;113m█\u001b[0m\u001b[38;2;117;195;107m█\u001b[0m\u001b[38;2;103;207;131m█\u001b[0m\u001b[38;2;100;218;179m█\u001b[0m\u001b[38;2;98;222;229m█\u001b[0m\u001b[38;2;97;175;239m█\u001b[0m\u001b[0m\n"
      ]
     }
    ],
    "source": [
     "from illustrate import illustrate\n",
     "\n",
-    "print(illustrate(list(zip(tokens, values))))"
+    "print(illustrate(list(zip(tokens, values)), gradient=\"one-dark\"))"
    ]
   },
   {
