chore: Update granular-rewards.ipynb

--- a/dev/granular-rewards.ipynb
+++ b/dev/granular-rewards.ipynb
@@ -134,17 +134,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 41,
    "id": "734630ce",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.06801649,  0.54695847,  1.98862763, -0.47844145])"
+       "array([0.12520144, 0.03095462, 0.8115926 , 1.40174009])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "3798550b",
    "metadata": {},
    "outputs": [
@@ -167,26 +167,26 @@
      "output_type": "stream",
      "text": [
       "\u001b[90m╔═════════════════════════════════════════════════════════════╗\u001b[0m\n",
-      "\u001b[90m║      Stats: μ= 0.531, σ= 0.916, min=-0.478, max= 1.989      ║\u001b[0m\n",
+      "\u001b[90m║      Stats: μ= 0.592, σ= 0.556, min= 0.031, max= 1.402      ║\u001b[0m\n",
       "\u001b[90m╚═════════════════════════════════════════════════════════════╝\u001b[0m\n",
       "\n",
-      "\u001b[38;2;172;147;192mHello\u001b[0m\u001b[38;2;170;177;191m,\u001b[0m\u001b[38;2;133;189;109m world\u001b[0m\u001b[38;2;196;116;147m!\u001b[0m\n",
+      "\u001b[38;2;193;92;84mHello\u001b[0m\u001b[38;2;197;77;71m,\u001b[0m\u001b[38;2;149;175;197m world\u001b[0m\u001b[38;2;75;156;223m!\u001b[0m\n",
       "\n",
       "Value Distribution:\n",
-      "  \u001b[38;2;172;147;192mHello \u001b[0m  [────────\u001b[38;2;172;147;192m█\u001b[0m─│─────────]    0.068\n",
-      "  \u001b[38;2;170;177;191m,     \u001b[0m  [──────────│─────────]    0.547\n",
-      "  \u001b[38;2;133;189;109m world\u001b[0m  [──────────│────\u001b[38;2;133;189;109m█\u001b[0m────]    1.989\n",
-      "  \u001b[38;2;196;116;147m!     \u001b[0m  [──────\u001b[38;2;196;116;147m█\u001b[0m───│─────────]   -0.478\n",
+      "  \u001b[38;2;193;92;84mHello \u001b[0m  [───────\u001b[38;2;193;92;84m█\u001b[0m──│─────────]    0.125\n",
+      "  \u001b[38;2;197;77;71m,     \u001b[0m  [──────\u001b[38;2;197;77;71m█\u001b[0m───│─────────]    0.031\n",
+      "  \u001b[38;2;149;175;197m world\u001b[0m  [──────────│\u001b[38;2;149;175;197m█\u001b[0m────────]    0.812\n",
+      "  \u001b[38;2;75;156;223m!     \u001b[0m  [──────────│───\u001b[38;2;75;156;223m█\u001b[0m─────]    1.402\n",
       "\n",
       "\u001b[90m────────────────────────────────────────────────────────────\u001b[0m\n",
-      "Gradient (one-dark): \u001b[38;2;219;86;97m█\u001b[0m\u001b[38;2;215;88;88m█\u001b[0m\u001b[38;2;211;100;89m█\u001b[0m\u001b[38;2;208;112;91m█\u001b[0m\u001b[38;2;204;122;93m█\u001b[0m\u001b[38;2;200;118;98m█\u001b[0m\u001b[38;2;196;116;146m█\u001b[0m\u001b[38;2;193;133;189m█\u001b[0m\u001b[38;2;170;149;191m█\u001b[0m\u001b[38;2;163;165;191m█\u001b[0m\u001b[38;2;165;179;190m█\u001b[0m\u001b[38;2;153;187;187m█\u001b[0m\u001b[38;2;140;186;166m█\u001b[0m\u001b[38;2;127;185;135m█\u001b[0m\u001b[38;2;135;185;113m█\u001b[0m\u001b[38;2;117;195;107m█\u001b[0m\u001b[38;2;103;207;131m█\u001b[0m\u001b[38;2;100;218;179m█\u001b[0m\u001b[38;2;98;222;229m█\u001b[0m\u001b[38;2;97;175;239m█\u001b[0m\u001b[0m\n"
+      "Gradient (one-dark-simple): \u001b[38;2;200;28;43m█\u001b[0m\u001b[38;2;200;29;43m█\u001b[0m\u001b[38;2;201;30;43m█\u001b[0m\u001b[38;2;201;33;44m█\u001b[0m\u001b[38;2;202;39;46m█\u001b[0m\u001b[38;2;203;47;49m█\u001b[0m\u001b[38;2;199;68;64m█\u001b[0m\u001b[38;2;191;97;88m█\u001b[0m\u001b[38;2;185;125;115m█\u001b[0m\u001b[38;2;174;152;182m█\u001b[0m\u001b[38;2;162;174;189m█\u001b[0m\u001b[38;2;142;173;199m█\u001b[0m\u001b[38;2;117;166;207m█\u001b[0m\u001b[38;2;95;161;215m█\u001b[0m\u001b[38;2;76;157;222m█\u001b[0m\u001b[38;2;62;154;228m█\u001b[0m\u001b[38;2;52;151;233m█\u001b[0m\u001b[38;2;46;150;236m█\u001b[0m\u001b[38;2;43;150;237m█\u001b[0m\u001b[38;2;42;150;237m█\u001b[0m\u001b[0m\n"
      ]
     }
    ],
    "source": [
     "from illustrate import illustrate\n",
     "\n",
-    "print(illustrate(list(zip(tokens, values)), gradient=\"one-dark\"))"
+    "print(illustrate(list(zip(tokens, values)), gradient=\"one-dark-simple\"))"
    ]
   },
   {
