--- a/dev/granular-rewards.ipynb
+++ b/dev/granular-rewards.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "bcde028a",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
        "['Hello', ',', ' world', '!']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,17 +134,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "id": "734630ce",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.12520144, 0.03095462, 0.8115926 , 1.40174009])"
+       "array([-0.73174028,  0.03121855,  0.24049988, -0.90269145])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "id": "3798550b",
    "metadata": {},
    "outputs": [
@@ -167,16 +167,16 @@
      "output_type": "stream",
      "text": [
       "\u001b[90m╔═════════════════════════════════════════════════════════════╗\u001b[0m\n",
-      "\u001b[90m║      Stats: μ= 0.592, σ= 0.556, min= 0.031, max= 1.402      ║\u001b[0m\n",
+      "\u001b[90m║      Stats: μ=-0.341, σ= 0.486, min=-0.903, max= 0.240      ║\u001b[0m\n",
       "\u001b[90m╚═════════════════════════════════════════════════════════════╝\u001b[0m\n",
       "\n",
-      "\u001b[38;2;193;92;84mHello\u001b[0m\u001b[38;2;197;77;71m,\u001b[0m\u001b[38;2;149;175;197m world\u001b[0m\u001b[38;2;75;156;223m!\u001b[0m\n",
+      "\u001b[38;2;192;95;87mHello\u001b[0m\u001b[38;2;119;167;206m,\u001b[0m\u001b[38;2;89;159;217m world\u001b[0m\u001b[38;2;200;64;61m!\u001b[0m\n",
       "\n",
       "Value Distribution:\n",
-      "  \u001b[38;2;193;92;84mHello \u001b[0m  [───────\u001b[38;2;193;92;84m█\u001b[0m──│─────────]    0.125\n",
-      "  \u001b[38;2;197;77;71m,     \u001b[0m  [──────\u001b[38;2;197;77;71m█\u001b[0m───│─────────]    0.031\n",
-      "  \u001b[38;2;149;175;197m world\u001b[0m  [──────────│\u001b[38;2;149;175;197m█\u001b[0m────────]    0.812\n",
-      "  \u001b[38;2;75;156;223m!     \u001b[0m  [──────────│───\u001b[38;2;75;156;223m█\u001b[0m─────]    1.402\n",
+      "  \u001b[38;2;192;95;87mHello \u001b[0m  [───────\u001b[38;2;192;95;87m█\u001b[0m──│─────────]   -0.732\n",
+      "  \u001b[38;2;119;167;206m,     \u001b[0m  [──────────│─\u001b[38;2;119;167;206m█\u001b[0m───────]    0.031\n",
+      "  \u001b[38;2;89;159;217m world\u001b[0m  [──────────│──\u001b[38;2;89;159;217m█\u001b[0m──────]    0.240\n",
+      "  \u001b[38;2;200;64;61m!     \u001b[0m  [──────\u001b[38;2;200;64;61m█\u001b[0m───│─────────]   -0.903\n",
       "\n",
       "\u001b[90m────────────────────────────────────────────────────────────\u001b[0m\n",
       "Gradient (one-dark-simple): \u001b[38;2;200;28;43m█\u001b[0m\u001b[38;2;200;29;43m█\u001b[0m\u001b[38;2;201;30;43m█\u001b[0m\u001b[38;2;201;33;44m█\u001b[0m\u001b[38;2;202;39;46m█\u001b[0m\u001b[38;2;203;47;49m█\u001b[0m\u001b[38;2;199;68;64m█\u001b[0m\u001b[38;2;191;97;88m█\u001b[0m\u001b[38;2;185;125;115m█\u001b[0m\u001b[38;2;174;152;182m█\u001b[0m\u001b[38;2;162;174;189m█\u001b[0m\u001b[38;2;142;173;199m█\u001b[0m\u001b[38;2;117;166;207m█\u001b[0m\u001b[38;2;95;161;215m█\u001b[0m\u001b[38;2;76;157;222m█\u001b[0m\u001b[38;2;62;154;228m█\u001b[0m\u001b[38;2;52;151;233m█\u001b[0m\u001b[38;2;46;150;236m█\u001b[0m\u001b[38;2;43;150;237m█\u001b[0m\u001b[38;2;42;150;237m█\u001b[0m\u001b[0m\n"
