refactor: Update normalization method in illustrate.py and adjust output statistics
- Changed normalization of values in the `illustrate` function to scale to [-1, 1] based on max absolute value.
- Updated the output statistics format to reflect the new normalization method.
- Adjusted the value distribution representation to align with the new normalization approach.

--- a/dev/granular-rewards.ipynb
+++ b/dev/granular-rewards.ipynb
@@ -134,17 +134,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "734630ce",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-0.73174028,  0.03121855,  0.24049988, -0.90269145])"
+       "array([ 0.12048794, -0.84695836, -0.68592883, -0.21220931])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "3798550b",
    "metadata": {},
    "outputs": [
@@ -167,16 +167,16 @@
      "output_type": "stream",
      "text": [
       "\u001b[90m╔═════════════════════════════════════════════════════════════╗\u001b[0m\n",
-      "\u001b[90m║      Stats: μ=-0.341, σ= 0.486, min=-0.903, max= 0.240      ║\u001b[0m\n",
+      "\u001b[90m║   Stats: scale= 0.847, min=-0.847, max= 0.120, mean=-0.406  ║\u001b[0m\n",
       "\u001b[90m╚═════════════════════════════════════════════════════════════╝\u001b[0m\n",
       "\n",
-      "\u001b[38;2;192;95;87mHello\u001b[0m\u001b[38;2;119;167;206m,\u001b[0m\u001b[38;2;89;159;217m world\u001b[0m\u001b[38;2;200;64;61m!\u001b[0m\n",
+      "\u001b[38;2;146;175;198mHello\u001b[0m\u001b[38;2;200;28;43m,\u001b[0m\u001b[38;2;201;30;43m world\u001b[0m\u001b[38;2;191;100;91m!\u001b[0m\n",
       "\n",
       "Value Distribution:\n",
-      "  \u001b[38;2;192;95;87mHello \u001b[0m  [───────\u001b[38;2;192;95;87m█\u001b[0m──│─────────]   -0.732\n",
-      "  \u001b[38;2;119;167;206m,     \u001b[0m  [──────────│─\u001b[38;2;119;167;206m█\u001b[0m───────]    0.031\n",
-      "  \u001b[38;2;89;159;217m world\u001b[0m  [──────────│──\u001b[38;2;89;159;217m█\u001b[0m──────]    0.240\n",
-      "  \u001b[38;2;200;64;61m!     \u001b[0m  [──────\u001b[38;2;200;64;61m█\u001b[0m───│─────────]   -0.903\n",
+      "  \u001b[38;2;146;175;198mHello \u001b[0m  [──────────│\u001b[38;2;146;175;198m█\u001b[0m────────]    0.120\n",
+      "  \u001b[38;2;200;28;43m,     \u001b[0m  [\u001b[38;2;200;28;43m█\u001b[0m─────────│─────────]   -0.847\n",
+      "  \u001b[38;2;201;30;43m world\u001b[0m  [─\u001b[38;2;201;30;43m█\u001b[0m────────│─────────]   -0.686\n",
+      "  \u001b[38;2;191;100;91m!     \u001b[0m  [───────\u001b[38;2;191;100;91m█\u001b[0m──│─────────]   -0.212\n",
       "\n",
       "\u001b[90m────────────────────────────────────────────────────────────\u001b[0m\n",
       "Gradient (one-dark-simple): \u001b[38;2;200;28;43m█\u001b[0m\u001b[38;2;200;29;43m█\u001b[0m\u001b[38;2;201;30;43m█\u001b[0m\u001b[38;2;201;33;44m█\u001b[0m\u001b[38;2;202;39;46m█\u001b[0m\u001b[38;2;203;47;49m█\u001b[0m\u001b[38;2;199;68;64m█\u001b[0m\u001b[38;2;191;97;88m█\u001b[0m\u001b[38;2;185;125;115m█\u001b[0m\u001b[38;2;174;152;182m█\u001b[0m\u001b[38;2;162;174;189m█\u001b[0m\u001b[38;2;142;173;199m█\u001b[0m\u001b[38;2;117;166;207m█\u001b[0m\u001b[38;2;95;161;215m█\u001b[0m\u001b[38;2;76;157;222m█\u001b[0m\u001b[38;2;62;154;228m█\u001b[0m\u001b[38;2;52;151;233m█\u001b[0m\u001b[38;2;46;150;236m█\u001b[0m\u001b[38;2;43;150;237m█\u001b[0m\u001b[38;2;42;150;237m█\u001b[0m\u001b[0m\n"
