fix: Update execution counts and logging outputs in temporal-clue-torchtune.ipynb
- Set execution counts for code cells to maintain proper execution order.
- Enhanced logging outputs to provide detailed information on model training and run tracking with Weights & Biases.
- Cleaned up and formatted outputs for improved readability and consistency.

--- a/examples/temporal_clue/temporal-clue-torchtune.ipynb
+++ b/examples/temporal_clue/temporal-clue-torchtune.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,9 +12,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".cell-output-ipywidget-background {\n",
+       "    background-color: transparent !important;\n",
+       "}\n",
+       ":root {\n",
+       "    --jp-widgets-color: var(--vscode-editor-foreground);\n",
+       "    --jp-widgets-font-size: var(--vscode-editor-font-size);\n",
+       "}  \n",
+       "</style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%html\n",
     "<style>\n",
@@ -32,7 +53,83 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mbradhilton\u001b[0m to \u001b[32mhttps://api.wandb.ai\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "Tracking run with wandb version 0.21.0"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Run data is saved locally in <code>/home/ubuntu/sky_workdir/examples/temporal_clue/wandb/run-20250722_183701-026</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Syncing run <strong><a href='https://wandb.ai/bradhilton/temporal-clue/runs/026' target=\"_blank\">026</a></strong> to <a href='https://wandb.ai/bradhilton/temporal-clue' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View project at <a href='https://wandb.ai/bradhilton/temporal-clue' target=\"_blank\">https://wandb.ai/bradhilton/temporal-clue</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run at <a href='https://wandb.ai/bradhilton/temporal-clue/runs/026' target=\"_blank\">https://wandb.ai/bradhilton/temporal-clue/runs/026</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO 07-22 18:37:09 [__init__.py:244] Automatically detected platform cuda.\n",
+      "WARNING 07-22 18:37:16 [env_override.py:17] NCCL_CUMEM_ENABLE is set to 0, skipping override. This may increase memory overhead with cudagraph+allreduce: https://github.com/NVIDIA/nccl/issues/1234\n"
+     ]
+    }
+   ],
    "source": [
     "import art\n",
     "import asyncio\n",
@@ -85,7 +182,7 @@
     "\n",
     "\n",
     "model = art.TrainableModel(\n",
-    "    name=\"002\",\n",
+    "    name=\"026\",\n",
     "    project=\"temporal-clue\",\n",
     "    base_model=\"Qwen/Qwen3-14B\",\n",
     "    _internal_config={\n",
@@ -93,7 +190,7 @@
     "            \"tensor_parallel_size\": torch.cuda.device_count(),\n",
     "            \"gpu_memory_utilization\": 0.9,\n",
     "            \"max_num_seqs\": 256,\n",
-    "            \"enforce_eager\": True,\n",
+    "            # \"enforce_eager\": True,\n",
     "        },\n",
     "        \"torchtune_args\": {\n",
     "            \"model\": \"qwen3_14b_instruct\",\n",
@@ -107,25 +204,24 @@
     "\n",
     "stride = 4\n",
     "for i in range(await model.get_step(), 1_000):\n",
-    "    val_groups, train_groups = await asyncio.gather(\n",
-    "        art.gather_trajectory_groups(\n",
+    "    train_groups = await art.gather_trajectory_groups(\n",
+    "        (\n",
+    "            art.TrajectoryGroup(rollout(model, puzzle) for _ in range(16))\n",
+    "            for puzzle in train_puzzles[i * stride : (i + 1) * stride]\n",
+    "        ),\n",
+    "        pbar_desc=\"train\",\n",
+    "        pbar_total_completion_tokens=False,\n",
+    "    )\n",
+    "    if i % 4 == 0:\n",
+    "        val_groups = await art.gather_trajectory_groups(\n",
     "            (\n",
     "                art.TrajectoryGroup(rollout(model, puzzle) for _ in range(1))\n",
-    "                for puzzle in val_puzzles[:1]\n",
+    "                for puzzle in val_puzzles\n",
     "            ),\n",
     "            pbar_desc=\"val\",\n",
     "            pbar_total_completion_tokens=False,\n",
-    "        ),\n",
-    "        art.gather_trajectory_groups(\n",
-    "            (\n",
-    "                art.TrajectoryGroup(rollout(model, puzzle) for _ in range(4))\n",
-    "                for puzzle in train_puzzles[i * stride : (i + 1) * stride]\n",
-    "            ),\n",
-    "            pbar_desc=\"train\",\n",
-    "            pbar_total_completion_tokens=False,\n",
-    "        ),\n",
-    "    )\n",
-    "    await model.log(val_groups)\n",
+    "        )\n",
+    "        await model.log(val_groups)\n",
     "    await model.delete_checkpoints()\n",
     "    await model.train(\n",
     "        train_groups,\n",
